# CrowdFace

./: BAGEL_INTEGRATION.md  Cargo.toml  CrowdFace_Demo.ipynb  README.md
src/: lib.rs
src/python/: bagel_api.py  bagel_integration.py  bagel_loader.py  crowdface_pipeline.py  main.py  test_bagel.py
src/python/bagel/: __init__.py  ad_optimization.py  ad_placement.py  scene_understanding.py
src/rust/src/: api.rs  aws.rs  config.rs  error.rs  lib.rs  main.rs  nvidia.rs  pipeline.rs
src/rust/src/models/: injection.rs  matting.rs  mod.rs  segmentation.rs
src/rust/src/utils/: gpu.rs  logging.rs  mod.rs  system.rs
