[package]
name = "crowdface"
version = "0.1.0"
edition = "2021"
authors = ["CrowdFace Team"]
description = "Advanced crowd segmentation and ad injection system"
license = "MIT"

[dependencies]
# Core dependencies
tokio = { version = "1.28", features = ["full"] }
actix-web = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Video processing
# opencv = { version = "0.82" }  # Commented out due to build issues
# ffmpeg-next = "6.0"  # Commented out due to build issues
image = "0.24"

# GPU acceleration
tch = "0.13"  # PyTorch bindings for Rust

# AWS integration
aws-config = "0.55"
aws-sdk-s3 = "0.27"
aws-sdk-sagemaker = "0.27"

# Web/API
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
hyper = "0.14"

# Utils
rayon = "1.7"
ndarray = "0.15"
bytes = "1.4"
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.3", features = ["v4", "serde"] }
num_cpus = "1.17.0"
base64 = "0.22.1"
ctrlc = "3.4.7"

[lib]
name = "crowdface"
path = "src/lib.rs"

[[bin]]
name = "crowdface-server"
path = "src/main.rs"

[features]
default = ["cuda"]
cuda = []
cpu-only = []
aws = []
mobile = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
