[package]
name = "crowdface"
version = "0.1.0"
edition = "2021"
authors = ["CrowdFace Technologies"]
description = "Neural-Adaptive Crowd Segmentation with Contextual Pixel-Space Advertisement Integration"

[dependencies]
opencv = "0.78.0"
torch-sys = "0.8.0"
ndarray = "0.15.6"
image = "0.24.6"
anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[lib]
name = "crowdface"
path = "src/lib.rs"

[[bin]]
name = "crowdface-server"
path = "src/bin/server.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
